# Catalyst-CE

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  manifest_v1.0.0.json  manifest_v1.0.1.json
TestGame_v1.0.0/data/: config.txt
TestGame_v1.0.1/data/: config.txt
cef_integration/: CMakeLists.txt
cef_integration/include/game_launcher/cef_integration/: cef_json_utils.h  game_launcher_api_handler.h  launcher_app.h  launcher_client.h  launcher_message_router_handler.h  launcher_render_process_handler.h
cef_integration/include/game_launcher/cef_integration/internal/: cef_absl_logging_bridge.h
cef_integration/src/: cef_json_utils.cpp  game_launcher_api_handler.cpp  launcher_app.cpp  launcher_client.cpp  launcher_message_router_handler.cpp  launcher_render_process_handler.cpp  placeholder.cpp
core/: CMakeLists.txt
core/include/game_launcher/core/: app_settings.h  auth_status.h  authentication.h  authentication_manager.h  background_task_manager.h  basic_game_management_service.h  basic_ipc_service.h  core_ipc_service.h  game_management.h  game_management_service.h  game_status.h  game_status_listener.h  ipc_service.h  ipc_service_layer.h  json_user_settings.h  manifest_parser.h  mock_auth_manager.h  network_utils.h  user_profile.h  user_settings.h
core/src/: app_settings.cpp  authentication.cpp  authentication_manager.cpp  background_task_manager.cpp  basic_game_management_service.cpp  basic_ipc_service.cpp  core_ipc_service.cpp  game_management.cpp  ipc_service_layer.cpp  json_user_settings.cpp  manifest_parser.cpp  mock_auth_manager.cpp  network_utils.cpp  user_profile.cpp  user_settings.cpp
main/: CMakeLists.txt  main.cpp
platform/: CMakeLists.txt
platform/src/: placeholder.cpp
resources/manifests/: manifest_v1.0.json  manifest_v1.1.json
tests/: CMakeLists.txt
tests/core/: authentication_manager_test.cpp  background_task_manager_test.cpp  basic_ipc_service_test.cpp  game_management_service_test.cpp  json_user_settings_test.cpp  user_settings_test.cpp
tests/data/: games.json
ui/: .env.example  games.json  index.html  package-lock.json  package.json  script.js  style.css  tsconfig.app.json  vite.config.ts
ui/src/: App.tsx  api.ts  main.tsx
ui/src/components/: Layout.tsx  LeftSidebar.tsx  LoginModal.tsx  MainContentArea.tsx  RightSidebar.tsx  TopBar.tsx
